Closed
Bug 207583
Opened 23 years ago
Closed 23 years ago
imgLoader::LoadImage called with null pointer from nsImageBoxFrame::UpdateImage
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
(
URL
)
Details
(Keywords: assertion)
Attachments
(1 file)
|
1.26 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
imgLoader::LoadImage
NS_ASSERTION(aURI, "imgLoader::LoadImage -- NULL URI pointer");
would trigger if
nsImageBoxFrame::UpdateImage
NS_NewURI(getter_AddRefs(srcURI), mSrc, nsnull, baseURI);
fails, because srcURI isn't checked before the call to:
il->LoadImage(srcURI, nsnull, documentURI, loadGroup, mListener, doc,
mLoadFlags, nsnull, nsnull, getter_AddRefs(mImageRequest));
This can happen if the moz-icon protocol fails to calculate an icon for a url
e.g. when the unknown helper application dialog appears.
Attachment #124527 -
Flags: superreview?(bz-bugspam)
Attachment #124527 -
Flags: review?(bz-bugspam)
Updated•23 years ago
|
Attachment #124527 -
Flags: superreview?(bz-bugspam)
Attachment #124527 -
Flags: superreview+
Attachment #124527 -
Flags: review?(bz-bugspam)
Attachment #124527 -
Flags: review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•