Bug 207583 imgLoader::LoadImage called with null pointer from nsImageBoxFrame::UpdateImage r=bz sr=bz